# POO-tema-2

./: Autentificare.cpp  Autentificare.h  Bautura.cpp  Bautura.h  BauturaSpeciala.cpp  BauturaSpeciala.h  CMakeLists.txt  Comanda.cpp  Comanda.h  Exceptii.h  Gestiune.cpp  Gestiune.h  Ingredient.cpp  Ingredient.h  Patiserie.cpp  Patiserie.h  Produs.cpp  Produs.h  ProdusCustom.cpp  ProdusCustom.h  README.md  Sandwich.cpp  Sandwich.h  bauturi.txt  ingrediente.txt  main.cpp  patiserie.txt  sandwichuri.txt  toppinguri.txt
